--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
